[tool.poetry]
name = "covid-seir-ethiopia-model"
version = "0.1.0"
description = "Copied from covid-seir-raes-model. Credit Kareljan Raes"
authors = ["yabebalFantaye <yabebal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dash = "1.9"
numpy = "1.18"
requests = "2.23"
pandas = "0.25"
xlrd = "1.2"
gcsfs = "0.6"
dash-bootstrap-components = "^0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
